Add the producer and broker

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,14 @@
+# Database configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+# API keys and secrets
+API_KEY=abc123xyz
+SECRET_KEY=def456uvw
+
 # Application settings
 APP_ENV=development
 PORT=3000
 DEBUG_MODE=true
+
+
